# PyNM

./: .gitignore  pyproject.toml
pynm/models/: gamlss.py
test/: test_pynm.py
