[project]
authors = [{name = "Ali Khan", email = "alik@robarts.ca"}]
dependencies = []
name = "PyNM"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pynm = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
r-gamlss = ">=5.5_0,<6"
python = ">=3.11.0,<3.12"
rpy2 = ">=3.6.0,<4.0"
jupyterlab = ">=4.4.9,<5"
pandas = ">=2.3.3,<3"
numpy = ">=2.3.3,<3"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.7,<4"
scipy = ">=1.16.2,<2"
scikit-learn = ">=1.7.2,<2"
pytest = ">=8.4.2,<9"

